<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:background="#7bb3f1"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/area"
                android:textSize="20dp"
                android:textColor="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" />

            <Spinner
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/area" />

            <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/texto"
                android:textSize="20dp"
                android:textColor="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" />

            <EditText
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:background="#ffffff"
                android:ems="10"
                android:id="@+id/texto" />

            <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/instituicao"
                android:textSize="20dp"
                android:textColor="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" />

            <EditText
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:background="#ffffff"
                android:ems="10"
                android:id="@+id/instituicao" />

            <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/alternativas"
                android:textSize="20dp"
                android:textColor="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_marginLeft="10dp"
                    android:text="@string/adicionar"
                    android:textSize="15dp"
                    android:textColor="#000000"
                    android:background="#ffffff"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/adicionar"
                    android:layout_weight="1" />

                <Button
                    android:layout_marginRight="10dp"
                    android:textColor="#000000"
                    android:background="#ffffff"
                    android:layout_marginLeft="5dp"
                    android:text="@string/remover"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/remover"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/alternativas"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></LinearLayout>

            <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/resposta"
                android:textSize="20dp"
                android:textColor="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" />

            <Spinner
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/resposta" />

            <Button
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/enviar"
                android:textColor="#000000"
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/enviar" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>